<resources>

        <string name="app_name">AgendaMed</string>
        <string name="txt_welcome_message">Bem-vindo(a) ao</string>
        <string name="txt_app_subtitle">Gerenciador de \nmedicamentos</string>
        <string name="txt_edit_entry_name">Digite seu nome:</string>
        <string name="txt_hint_edit_entry_name">seu nome</string>
        <string name="txt_button_continue">Continuar</string>

        <string name = "txt_splash_text_loading">Carregando ...</string>

        <string name="active_user">Usuário Ativo</string>
        <string name="settings">Configurações</string>
        <string name="users">Usuários</string>
        <string name="alarms">Alarmes</string>
        <string name="medicines">Medicamentos</string>
        <string name="manual">Manual</string>
        <string name="menu_item_spacing"> </string>

        <string name="txt_selecao_usuario">"Selecione um usuário \n para continuar"</string>


</resources>